Increase opacity on modal .container element so that text is more visible.  Fix pharma modal (button is outside of div).

--- a/css/styles.css
+++ b/css/styles.css
@@ -2561,7 +2561,15 @@ hr.globe-primary:after {
     display: none;
     opacity: 0;
 }
-
+.test {
+    color: black;
+    /* padding: 10vh 0 7.5vh 0; */
+    padding: 16vh 0 7vw 0;
+    min-height: 100%;
+    border: 0;
+    border-radius: 0;
+    text-align: center;
+}
 .modal-content {
     background: none;
 }
@@ -2623,7 +2631,7 @@ hr.globe-primary:after {
     background-color: black;
 }
 .company-modal > .modal-content > .container {
-    background-color: hsla(0, 0%, 100%, .65);
+    background-color: hsla(0, 0%, 100%, .85);
 }
 .references {
     font-size: 2.3vh;
